tests/org.eclipse.php.core.tests/workspace/errors/php54/testTypeReferenceError3.pdtt
--TEST--
Bug 549197 - Validator gets confused when a class alias matches the same name as a used trait
--FILE--
<?php
namespace Traits
{

    trait StuffMaker
    {

        public function makeStuff()
        {
            //code
        }
    }
}
namespace
{

    use stdClass as StuffMaker;

    interface IStuffMaker
    {

        public function makeStuff();
    }

    class AStuffMaker implements IStuffMaker
    {
        use Traits\StuffMaker;
    }
}
--EXPECT--
[line=17, start=158, end=166] The import stdClass is never used